# discordrpc

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build-release-binaries.yml  build.yml  fmt.yml
aur/: PKGBUILD
src/: cli.rs  execute.rs  main.rs
src/cli/: check.rs  mod.rs  parse.rs
