[package]
name = "discordrpc"
description = "Fast Discord RPC Client written in Rust"
license = "GPL-3.0"
authors = ["MedzikUser <nivua1fn@duck.com>"]
homepage = "https://github.com/MedzikUser/discord-rpc#readme"
repository = "https://github.com/MedzikUser/discord-rpc.git"
keywords = ["discord", "discord-rpc", "discordrpc", "discord-rpc-client"]
categories = ["command-line-utilities"]
version = "0.2.2"
edition = "2021"

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'
codegen-units = 1

[dependencies]
better-panic = "0.3.0"
clap = { version = "3.2.10", features = ["derive"] }
clap_complete = "3.2.3"
clap_mangen = "0.1.10"
colored = "2.0.0"
discord-rich-presence = "0.2.1"
